#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-14
2017-09-27 Mikhail S. Dubrovin
- GlobalUtils - add methods for file deployment etc.

Tag: V01-00-13
2017-09-22 Mikhail S. Dubrovin
- DCMethods - cleanup code, remove old versions of methods.

Tag: V01-00-12
2017-09-21 Mikhail S. Dubrovin
- Return cached constants (even default) directly from GenericCalibPars.constatns()

Tag: V01-00-11
2017-09-19 Mikhail S. Dubrovin
move method par_to_tsec from DCMethods to DCUtils.py where psana is imported

Tag: V01-00-10
2017-09-01 Mikhail S. Dubrovin
CalibFileFinder - add more protection; CalibParsStore - use env_time
	modified:   doc/ChangeLog
	modified:   doc/web/Makefile
	modified:   examples/ex-ipython.py
	modified:   src/CalibFileFinder.py
	modified:   src/CalibParsStore.py
	modified:   src/DCFileName.py
	modified:   src/GenericCalibPars.py

Tag: V01-00-09
2017-08-28 Mikhail S. Dubrovin
- DCMethods, DCUtils.py get timestamp from par=psanaEvr; add .gitignore, tume docstring

Tag: V01-00-08
2017-08-28 Mikhail S. Dubrovin
- Improve self-documentation of *.py modules

Tag: V01-00-07
2017-08-25 Mikhail S. Dubrovin
- Add sphinx documentation ob gh-pages. Update doc of all py modules.

Tag: V01-00-06
2017-07-12 Mikhail S. Dubrovin
- CalibParsStore.CreateForEvtEnv - add missing initialization of parameters

Tag: V01-00-05
2017-06-30 Mikhail S. Dubrovin
- CalibParsStore - cosmetic - get rid of redundant member data.
  GenericCalibPars.py - fix cashing of calib parameters in method constants()

Tag: V01-00-04
2017-06-19 Mikhail S. Dubrovin
- GenericCalibPars.constants_dcs - use only repo file, do not check *.h5 in calib

Tag: V01-00-03